Ensure text remains visible during webfont load
- https://web.dev/font-display/?utm_source=lighthouse&utm_medium=devtools

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -5,6 +5,8 @@
   font-weight: 400;
   src: url("../fonts/Inter-UI-Regular.woff2") format("woff2"),
        url("../fonts/Inter-UI-Regular.woff") format("woff");
+  @include font-swap;
+
 }
 @font-face {
   font-family: 'Inter UI';
@@ -13,6 +15,7 @@
   font-weight: 400;
   src: url("../fonts/Inter-UI-Italic.woff2") format("woff2"),
        url("../fonts/Inter-UI-Italic.woff") format("woff");
+  @include font-swap;
 }
 
 @font-face {
@@ -22,6 +25,7 @@
   font-weight: 600;
   src: url("../fonts/Inter-UI-Medium.woff2") format("woff2"),
        url("../fonts/Inter-UI-Medium.woff") format("woff");
+  @include font-swap;
 }
 @font-face {
   font-family: 'Inter UI';
@@ -30,6 +34,7 @@
   font-weight: 600;
   src: url("../fonts/Inter-UI-MediumItalic.woff2") format("woff2"),
        url("../fonts/Inter-UI-MediumItalic.woff") format("woff");
+  @include font-swap;
 }
 
 @font-face {
@@ -39,6 +44,7 @@
   font-weight: 800;
   src: url("../fonts/Inter-UI-Bold.woff2") format("woff2"),
        url("../fonts/Inter-UI-Bold.woff") format("woff");
+  @include font-swap;
 }
 @font-face {
   font-family: 'Inter UI';
@@ -47,4 +53,5 @@
   font-weight: 800;
   src: url("../fonts/Inter-UI-BoldItalic.woff2") format("woff2"),
        url("../fonts/Inter-UI-BoldItalic.woff") format("woff");
+  @include font-swap;
 }
