--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -32,3 +32,7 @@
     }
   }
 }
+
+@mixin font-swap {
+  font-display: swap;
+}
